// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`generate payment tests order with 2 small fries 1`] = `
Array [
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6633615710435117,
    "tip": 1.7227499999999998,
    "total": 14.12111157104351,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8366384289564881,
    "tip": 2.1727499999999997,
    "total": 17.744388428956487,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6633615710435117,
    "tip": 1.7227499999999998,
    "total": 14.12111157104351,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8366384289564881,
    "tip": 2.1727499999999997,
    "total": 17.744388428956487,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests order with large fries 1`] = `
Array [
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 9.99,
    "tax": 0.6868932038834952,
    "tip": 1.698,
    "total": 14.03822653721683,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 12.99,
    "tax": 0.8689320388349514,
    "tip": 2.148,
    "total": 17.670265372168284,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.3333333333333333,
    "fries": 1.33,
    "name": undefined,
    "price": 5.99,
    "tax": 0.4441747572815534,
    "tip": 1.098,
    "total": 9.195508090614888,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests order with small and large fries 1`] = `
Array [
  Object {
    "delivery": 0.2,
    "fries": 1.3960000000000001,
    "name": undefined,
    "price": 9.99,
    "tax": 0.5180949491885333,
    "tip": 1.7079000000000002,
    "total": 13.811994949188534,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.3960000000000001,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6546033672076444,
    "tip": 2.1579,
    "total": 17.398503367207645,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.3960000000000001,
    "name": undefined,
    "price": 9.99,
    "tax": 0.5180949491885333,
    "tip": 1.7079000000000002,
    "total": 13.811994949188534,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.3960000000000001,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6546033672076444,
    "tip": 2.1579,
    "total": 17.398503367207645,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.2,
    "fries": 1.3960000000000001,
    "name": undefined,
    "price": 12.99,
    "tax": 0.6546033672076444,
    "tip": 2.1579,
    "total": 17.398503367207645,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests single order no fries 1`] = `
Array [
  Object {
    "delivery": 1,
    "fries": 0,
    "name": undefined,
    "price": 9.99,
    "tax": 2,
    "tip": 1.4985,
    "total": 14.4885,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests single order with fries 1`] = `
Array [
  Object {
    "delivery": 1,
    "fries": 2.99,
    "name": undefined,
    "price": 9.99,
    "tax": 3,
    "tip": 1.947,
    "total": 18.927,
    "user_id": undefined,
  },
]
`;

exports[`generate payment tests varying orders 1`] = `
Array [
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 12.99,
    "tax": 1.3301193755739211,
    "tip": 2.1727499999999997,
    "total": 18.237869375573922,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 0,
    "name": undefined,
    "price": 6.49,
    "tax": 0.595959595959596,
    "tip": 0.9735,
    "total": 8.309459595959597,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 0,
    "name": undefined,
    "price": 14.49,
    "tax": 1.3305785123966942,
    "tip": 2.1734999999999998,
    "total": 18.244078512396694,
    "user_id": undefined,
  },
  Object {
    "delivery": 0.25,
    "fries": 1.495,
    "name": undefined,
    "price": 17.49,
    "tax": 1.7433425160697884,
    "tip": 2.84775,
    "total": 23.82609251606979,
    "user_id": undefined,
  },
]
`;
